filecaster/tests/ui/enum_not_supported.rs
use filecaster::FromFile;

#[derive(FromFile)]
enum MyEnum {
    A,
    B,
}

fn main() {}
